--- a/watermarking-attack/jupyter_test.ipynb
+++ b/watermarking-attack/jupyter_test.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "aa94f263-b393-4335-99cf-49163eda04d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "6c2d9d6c-bace-49ad-a5c7-0b0e1705f732",
    "metadata": {},
    "outputs": [
@@ -20,13 +21,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9788110260214218\n"
+      "0.4086598860492697\n",
+      "3.13.2 (main, Feb 12 2025, 14:51:17) [Clang 19.1.6 ]\n",
+      "2.2.3\n"
      ]
     }
    ],
    "source": [
     "x = np.random.rand()\n",
-    "print(x)"
+    "print(x)\n",
+    "print(sys.version)\n",
+    "print(np.__version__)"
    ]
   }
  ],
