--- a/watermarking-attack/jupyter_test.ipynb
+++ b/watermarking-attack/jupyter_test.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "aa94f263-b393-4335-99cf-49163eda04d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import sys"
+    "import sys\n",
+    "import torch\n",
+    "import torchvision"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "6c2d9d6c-bace-49ad-a5c7-0b0e1705f732",
    "metadata": {},
    "outputs": [
@@ -21,9 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4086598860492697\n",
+      "0.9816864063593658\n",
       "3.13.2 (main, Feb 12 2025, 14:51:17) [Clang 19.1.6 ]\n",
-      "2.2.3\n"
+      "2.2.3\n",
+      "True\n"
      ]
     }
    ],
@@ -31,7 +34,9 @@
     "x = np.random.rand()\n",
     "print(x)\n",
     "print(sys.version)\n",
-    "print(np.__version__)"
+    "print(np.__version__)\n",
+    "\n",
+    "print(torch.cuda.is_available())"
    ]
   }
  ],
