--- a/watermarking-attack/jupyter_test.ipynb
+++ b/watermarking-attack/jupyter_test.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "aa94f263-b393-4335-99cf-49163eda04d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import sys"
+    "import sys\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "6c2d9d6c-bace-49ad-a5c7-0b0e1705f732",
    "metadata": {},
    "outputs": [
@@ -21,9 +22,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4086598860492697\n",
-      "3.13.2 (main, Feb 12 2025, 14:51:17) [Clang 19.1.6 ]\n",
-      "2.2.3\n"
+      "0.5152152932618582\n",
+      "3.13.0 (tags/v3.13.0:60403a5, Oct  7 2024, 09:38:07) [MSC v.1941 64 bit (AMD64)]\n",
+      "2.2.3\n",
+      "Cuda is available: False\n"
      ]
     }
    ],
@@ -31,8 +33,18 @@
     "x = np.random.rand()\n",
     "print(x)\n",
     "print(sys.version)\n",
-    "print(np.__version__)"
+    "print(np.__version__)\n",
+    "\n",
+    "print(\"Cuda is available:\", torch.cuda.is_available())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b073b85-69c5-4b98-906c-fdac57b68e44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -51,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
