--- a/watermarking-attack/jupyter_test.ipynb
+++ b/watermarking-attack/jupyter_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "aa94f263-b393-4335-99cf-49163eda04d4",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "6c2d9d6c-bace-49ad-a5c7-0b0e1705f732",
    "metadata": {},
    "outputs": [
@@ -23,10 +23,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9816864063593658\n",
-      "3.13.2 (main, Feb 12 2025, 14:51:17) [Clang 19.1.6 ]\n",
+      "0.19950397717835078\n",
+      "3.13.2 (main, Feb 12 2025, 14:59:08) [Clang 19.1.6 ]\n",
       "2.2.3\n",
-      "True\n"
+      "Cuda is available: False\n",
+      "Accelerator:  mps\n"
      ]
     }
    ],
@@ -36,13 +37,14 @@
     "print(sys.version)\n",
     "print(np.__version__)\n",
     "\n",
-    "print(\"Cuda is available:\", torch.cuda.is_available())"
+    "print(\"Cuda is available:\", torch.cuda.is_available())\n",
+    "print(\"Accelerator: \", torch.accelerator.current_accelerator())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b073b85-69c5-4b98-906c-fdac57b68e44",
+   "id": "44674ecc-194e-4364-9ed4-45ea6fa80548",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -64,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
