--- a/watermarking-attack/jupyter_test.ipynb
+++ b/watermarking-attack/jupyter_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "aa94f263-b393-4335-99cf-49163eda04d4",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6c2d9d6c-bace-49ad-a5c7-0b0e1705f732",
    "metadata": {},
    "outputs": [
@@ -23,11 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.19950397717835078\n",
-      "3.13.2 (main, Feb 12 2025, 14:59:08) [Clang 19.1.6 ]\n",
+      "0.9592838751178975\n",
+      "3.12.0 (main, Oct  2 2023, 23:53:49) [MSC v.1929 64 bit (AMD64)]\n",
       "2.2.3\n",
-      "Cuda is available: False\n",
-      "Accelerator:  mps\n"
+      "Cuda is available: True\n"
      ]
     }
    ],
@@ -37,8 +36,7 @@
     "print(sys.version)\n",
     "print(np.__version__)\n",
     "\n",
-    "print(\"Cuda is available:\", torch.cuda.is_available())\n",
-    "print(\"Accelerator: \", torch.accelerator.current_accelerator())"
+    "print(\"Cuda is available:\", torch.cuda.is_available())"
    ]
   },
   {
@@ -66,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
