--- a/watermarking-attack/ctscan_densenet169.ipynb
+++ b/watermarking-attack/ctscan_densenet169.ipynb
@@ -26,10 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "cabf6168-3a3a-48e8-8224-1ee448b27b08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import random\n",
@@ -63,7 +71,7 @@
     {
      "data": {
       "text/plain": [
-       "device(type='cuda')"
+       "device(type='cpu')"
       ]
      },
      "execution_count": 2,
