--- a/watermarking-attack/ctscan_densenet169.ipynb
+++ b/watermarking-attack/ctscan_densenet169.ipynb
@@ -26,18 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cabf6168-3a3a-48e8-8224-1ee448b27b08",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import random\n",
@@ -64,23 +56,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "5d1bfcce-eb52-4774-8651-74fbb82ed817",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "device(type='cpu')"
+       "device(type='cuda')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device('cuda')\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    device = torch.device('mps')\n",
+    "else:\n",
+    "    device = torch.device('cpu')\n",
+    "\n",
     "device"
    ]
   },
@@ -94,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "28e9e2ab-86ab-4fe4-89bf-7d0d131ae9d0",
    "metadata": {},
    "outputs": [],
@@ -162,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "3267f8e0-5a99-4aa8-b428-cd3a6a9b63b2",
    "metadata": {},
    "outputs": [],
@@ -204,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "08c0984d-1b72-419d-af4a-fdd27ec957f6",
    "metadata": {},
    "outputs": [],
@@ -239,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "f5056cde-77ba-4962-8f55-e56cf8b89a48",
    "metadata": {},
    "outputs": [],
@@ -282,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "c847c7bb-6d8d-4851-a3c1-402c4084e843",
    "metadata": {},
    "outputs": [],
@@ -328,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "2cc86c7b-9251-4521-ad5b-04ea4562ec78",
    "metadata": {},
    "outputs": [
@@ -338,7 +336,7 @@
        "['COVID', 'non-COVID']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "e5a7004c-cb10-440f-b13d-ca993d46b187",
    "metadata": {},
    "outputs": [
@@ -383,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "001f7b85-dd33-4eee-b911-0f7011aa9219",
    "metadata": {},
    "outputs": [],
@@ -393,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "6fdb4395-23e2-47d4-89e4-63f5b049f9f6",
    "metadata": {},
    "outputs": [],
@@ -403,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "7d8d2ca2-7e0b-41f6-b480-d0f4666b8074",
    "metadata": {},
    "outputs": [
