--- a/watermarking-attack/ctscan_mobilenetv2.ipynb
+++ b/watermarking-attack/ctscan_mobilenetv2.ipynb
@@ -5,7 +5,7 @@
    "id": "9299b8c1-7950-4e4d-a0d7-353a2b6be92a",
    "metadata": {},
    "source": [
-    "# ctscan_resnet50"
+    "# ctscan_mobilenetV2"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "4c0287c3-a650-4613-8447-bdff8016696d",
    "metadata": {},
    "source": [
-    "Modified from [ctscan_densenet169.ipynb](ctscan_densenet169.ipynb)"
+    "Source: https://www.kaggle.com/code/ahmedtronic/covid-19-binary-classification-densenet169-98"
    ]
   },
   {
@@ -576,7 +576,7 @@
    "id": "69a65e7f-f9b1-4c51-9ebf-fe9d2ee0194d",
    "metadata": {},
    "source": [
-    "## ResNet50"
+    "## MobileNetV2"
    ]
   },
   {
@@ -590,103 +590,90 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff7c821f-5a90-4b20-8873-9f0da7a9c72e",
+   "id": "209dcfcf-2f1f-46af-b657-2592d25314ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "resnet = models.resnet50(weights=\"IMAGENET1K_V2\")"
+    "net = models.mobilenet_v2(weights='IMAGENET1K_V1')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f613f2f8-912b-42ee-9692-e66612f74dc1",
+   "id": "262be3cf-12bc-4c8b-a787-ce93474047c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for parameter in resnet.parameters():\n",
+    "for parameter in net.parameters():\n",
     "    parameter.requires_grad = False\n",
     "\n",
-    "resnet.fc"
+    "net.classifier"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cb37d2a-3d15-48b7-a9fb-2381aa9c132a",
+   "id": "9fa6a4e7-831d-4388-950f-0b699eef45b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "resnet.fc = nn.Sequential(\n",
-    "    nn.Linear(resnet.fc.in_features, 512),  # Example: Add a fully connected layer\n",
+    "net.classifier = nn.Sequential(\n",
+    "    # nn.Linear(net.classifier.last_channel, 512),  # Example: Add a fully connected layer\n",
     "    nn.Dropout(p=0.5),\n",
-    "    nn.Linear(512, num_classes)  # Final output layer for binary classification (COVID vs. non-COVID)\n",
+    "    nn.Linear(net.last_channel, num_classes)  # Final output layer for binary classification (COVID vs. non-COVID)\n",
     ")\n",
     "\n",
-    "resnet = resnet.to(device)\n",
-    "resnet.fc"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7d349f55-24ad-4281-8d92-66be84753e76",
-   "metadata": {},
-   "source": [
-    "## Initial Training"
+    "net = net.to(device)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "515f9b90-5e6a-40d8-a78b-f2b2936a1fee",
+   "id": "6a31e6cb-fe2f-4d68-9fe2-089a7c37785e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lower learning rate for fine-tuning\n",
-    "optimizer = optim.Adam(resnet.parameters(), lr=3e-4, weight_decay=0.01)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "\n",
     "# Early stopping parameters\n",
     "best_score = float(\"inf\") # ModelCheckpoint\n",
     "patience = 0 # EarlyStopping\n",
-    "# fine_tuning_epochs = 50  # number of fine-tuning epochs\n",
-    "fine_tuning_epochs = 10  # number of fine-tuning epochs"
+    "\n",
+    "initial_epochs = 20  # Number of epochs before fine-tuning\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(net.classifier.parameters(), lr=1e-3, weight_decay=0.01)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "760a9a79-1a3c-4c3b-8866-c6841a2ba5d6",
+   "id": "251a42eb-2104-4402-9925-76866461bb41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train loop\n",
-    "\n",
     "train_losses = []\n",
     "valid_losses = []\n",
     "train_accs = []\n",
     "valid_accs = []\n",
     "\n",
-    "for epoch in range(fine_tuning_epochs):\n",
-    "    print(f\"Epoch[{epoch+1}/{fine_tuning_epochs}],    \", end=\"\")\n",
+    "# train loop\n",
     "\n",
-    "    avg_train_loss, train_acc = train_epoch(resnet)\n",
-    "    avg_valid_loss, valid_acc = get_val(resnet)\n",
+    "for epoch in range(initial_epochs):\n",
+    "    print(f\"Epoch[{epoch+1}/{initial_epochs}],    \", end=\"\")\n",
     "\n",
+    "    avg_train_loss, train_acc = train_epoch(net)\n",
+    "    avg_valid_loss, valid_acc = get_val(net)\n",
     "\n",
     "    # ModelCheckpoint & Save best model \n",
     "    if (avg_valid_loss < best_score):\n",
     "        best_score = avg_valid_loss\n",
-    "        torch.save(resnet.state_dict(), f\"model_resnet_finetuned.pth\")\n",
+    "        torch.save(net.state_dict(), f\"model_net.pth\")\n",
     "        patience = 0\n",
     "        \n",
-    "    # EarlyStopping Callback\n",
+    "    # EarlyStopping\n",
     "    else:\n",
     "        patience += 1\n",
     "        if (patience >= 10):\n",
     "            print(f\"Early stopping triggered after {epoch} epochs during training.\")\n",
     "            break\n",
-    "    \n",
     "        \n",
     "    train_losses.append(avg_train_loss)\n",
     "    valid_losses.append(avg_valid_loss)\n",
@@ -700,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1a66001-8120-4185-9ac2-af7be2c73cdc",
+   "id": "7d349f55-24ad-4281-8d92-66be84753e76",
    "metadata": {},
    "source": [
     "## Fine-Tuning"
@@ -709,59 +696,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6e56f59-68ae-48fd-9cf4-1c83a9861a0a",
+   "id": "5e309e4b-1fdc-4c21-91d2-c0732c039409",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for parameter in resnet.parameters():\n",
-    "    parameter.requires_grad = True\n",
-    "for parameter in resnet.fc.parameters():\n",
-    "    parameter.requires_grad = False"
+    "for parameter in net.features[-4:].parameters():\n",
+    "    parameter.requires_grad = True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8af8f3f9-5778-4dc5-b1fc-725b80d26bba",
+   "id": "515f9b90-5e6a-40d8-a78b-f2b2936a1fee",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Lower learning rate for fine-tuning\n",
-    "optimizer = optim.Adam(resnet.parameters(), lr=6e-5, weight_decay=0.01)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(net.parameters(), lr=3e-5, weight_decay=0.01)\n",
     "\n",
     "# Early stopping parameters\n",
     "best_score = float(\"inf\") # ModelCheckpoint\n",
     "patience = 0 # EarlyStopping\n",
-    "# fine_tuning_epochs = 50  # number of fine-tuning epochs\n",
-    "fine_tuning_epochs = 15  # number of fine-tuning epochs"
+    "fine_tuning_epochs = 50  # number of fine-tuning epochs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daa51e68-37ae-4bd2-9fb5-77cc79e2ad41",
+   "id": "760a9a79-1a3c-4c3b-8866-c6841a2ba5d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# train loop\n",
     "\n",
-    "train_losses = []\n",
-    "valid_losses = []\n",
-    "train_accs = []\n",
-    "valid_accs = []\n",
-    "\n",
     "for epoch in range(fine_tuning_epochs):\n",
     "    print(f\"Epoch[{epoch+1}/{fine_tuning_epochs}],    \", end=\"\")\n",
     "\n",
-    "    avg_train_loss, train_acc = train_epoch(resnet)\n",
-    "    avg_valid_loss, valid_acc = get_val(resnet)\n",
+    "    avg_train_loss, train_acc = train_epoch(net)\n",
+    "    avg_valid_loss, valid_acc = get_val(net)\n",
     "\n",
     "\n",
     "    # ModelCheckpoint & Save best model \n",
     "    if (avg_valid_loss < best_score):\n",
     "        best_score = avg_valid_loss\n",
-    "        torch.save(resnet.state_dict(), f\"model_resnet_finetuned.pth\")\n",
+    "        torch.save(net.state_dict(), f\"model_net_finetuned.pth\")\n",
     "        patience = 0\n",
     "        \n",
     "    # EarlyStopping Callback\n",
@@ -789,7 +767,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_curves_tuning(train_losses, valid_losses, train_accs, valid_accs, fine_tune_epoch=2)"
+    "learning_curves_tuning(train_losses, valid_losses, train_accs, valid_accs, fine_tune_epoch=initial_epochs)"
    ]
   },
   {
@@ -799,7 +777,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation_loss, validation_accuracy = get_val(resnet)\n",
+    "validation_loss, validation_accuracy = get_val(net)\n",
     "print(f'Validation Loss: {validation_loss:.4f}, Validation Accuracy: {validation_accuracy*100:.2f}%')"
    ]
   },
@@ -810,7 +788,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_loss, test_accuracy = get_test(resnet)\n",
+    "test_loss, test_accuracy = get_test(net)\n",
     "print(f'Test Loss: {test_loss:.4f}, Test Accuracy: {test_accuracy*100:.2f}%')"
    ]
   },
@@ -829,7 +807,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_true, y_pred = get_predict(resnet, test_loader, device)\n",
+    "y_true, y_pred = get_predict(net, test_loader, device)\n",
     "print(classification_report(y_true, y_pred, target_names= class_names))"
    ]
   },
