Adding MobileNetV2 model results and analysis

--- a/watermarking-attack/ctscan_mobilenetv2.ipynb
+++ b/watermarking-attack/ctscan_mobilenetv2.ipynb
@@ -613,14 +613,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5cba79f0-7e2e-4ed8-8b9c-8a6d9e605a50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net.last_channel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9fa6a4e7-831d-4388-950f-0b699eef45b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "net.classifier = nn.Sequential(\n",
-    "    # nn.Linear(net.classifier.last_channel, 512),  # Example: Add a fully connected layer\n",
+    "    nn.Linear(net.last_channel, 512),  # Example: Add a fully connected layer\n",
     "    nn.Dropout(p=0.5),\n",
-    "    nn.Linear(net.last_channel, num_classes)  # Final output layer for binary classification (COVID vs. non-COVID)\n",
+    "    nn.Linear(512, num_classes)  # Final output layer for binary classification (COVID vs. non-COVID)\n",
     ")\n",
     "\n",
     "net = net.to(device)"
@@ -696,11 +706,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "978524ab-501a-4a96-8465-dfc4a2247a12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# net.features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5e309e4b-1fdc-4c21-91d2-c0732c039409",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for parameter in net.features[-4:].parameters():\n",
+    "for parameter in net.features[-6:].parameters():\n",
     "    parameter.requires_grad = True"
    ]
   },
