--- a/watermarking-attack/guo_zhuang/guo_zhuang.ipynb
+++ b/watermarking-attack/guo_zhuang/guo_zhuang.ipynb
@@ -7,6 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from pathlib import Path\n",
     "import numpy as np\n",
     "import hashlib\n",
     "from cryptography.hazmat.primitives.asymmetric import rsa, padding\n",
@@ -15,13 +17,84 @@
     "from cryptography.hazmat.backends import default_backend\n",
     "from PIL import Image\n",
     "from io import BytesIO\n",
-    "from typing import List, Tuple"
+    "from typing import List, Tuple\n",
+    "from watermarker import MedicalImageWatermarker"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7b8c9107-2f8e-45b6-b7f7-9f0c74ff2012",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "watermarker = MedicalImageWatermarker()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b816aae4-ae3f-4752-8520-4364ab9cc2cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "private_key, public_key = watermarker.generate_keys()\n",
+    "\n",
+    "# Embed watermark\n",
+    "watermarked_img = watermarker.embed_watermark(\n",
+    "    \"../datasets/ctscan/raw/COVID/Covid (32).png\",\n",
+    "    private_key,\n",
+    "    \"yhe3784ryewrfye\",\n",
+    "    [(5, 5), (15, 5), (15, 15), (5, 15)]\n",
+    ")\n",
+    "watermarked_img.save(\"watermarked.png\")\n",
+    "\n",
+    "# Extract and verify\n",
+    "result = watermarker.extract_watermark(\n",
+    "    \"watermarked.png\",\n",
+    "    public_key,\n",
+    "    [(5, 5), (15, 5), (15, 15), (5, 15)]\n",
+    ")\n",
+    "print(\"Verification result:\", result)\n",
+    "print(result.decode(\"UTF-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7ecff9b-f64b-4146-8ed1-7cc3d82c9f09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Path().resolve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "add9570e-948e-4a2e-8df2-b0c2c1913aea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = \"7dhbu238rt76fgjhe\"\n",
+    "print(z, type(z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5755211e-c2d3-45e3-99ce-8604cb74fcf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z1 = b\"7dhbu238rt76fgjhe\"\n",
+    "print(z1, type(z1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82e13478-1edc-4f81-821d-f7fb4e45b2db",
    "metadata": {},
    "outputs": [],
    "source": []
