--- a/watermarking-attack/guo_zhuang/guo_zhuang.ipynb
+++ b/watermarking-attack/guo_zhuang/guo_zhuang.ipynb
@@ -44,7 +44,7 @@
     "watermarked_img = watermarker.embed_watermark(\n",
     "    \"../datasets/ctscan/raw/COVID/Covid (32).png\",\n",
     "    private_key,\n",
-    "    \"yhe3784ryewrfye\",\n",
+    "    \"a\",\n",
     "    [(5, 5), (15, 5), (15, 15), (5, 15)]\n",
     ")\n",
     "watermarked_img.save(\"watermarked.png\")\n",
@@ -56,7 +56,7 @@
     "    [(5, 5), (15, 5), (15, 15), (5, 15)]\n",
     ")\n",
     "print(\"Verification result:\", result)\n",
-    "print(result.decode(\"UTF-8\"))"
+    "# print(result.decode(\"UTF-8\"))"
    ]
   },
   {
@@ -94,7 +94,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82e13478-1edc-4f81-821d-f7fb4e45b2db",
+   "id": "ba90ad0e-7464-4148-9be8-1f929c44307e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int(6.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a78acbb6-20fb-4e24-95a7-c4fbf42d74be",
    "metadata": {},
    "outputs": [],
    "source": []
