--- a/watermarking-attack/guo_zhuang/guo_zhuang.ipynb
+++ b/watermarking-attack/guo_zhuang/guo_zhuang.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f7aa84f5-10ab-42e1-93f2-cd1ee9189bb0",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7b8c9107-2f8e-45b6-b7f7-9f0c74ff2012",
    "metadata": {},
    "outputs": [],
@@ -33,10 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b816aae4-ae3f-4752-8520-4364ab9cc2cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image Mode:  L\n",
+      "Image Shape:  (241, 305) <class 'numpy.ndarray'>\n",
+      "18240 6474\n",
+      "25\n",
+      "Verification result: 100111011110011111000001011110110100000110110110011101001101000001011100011111011000000001111001000101000000\n"
+     ]
+    }
+   ],
    "source": [
     "private_key, public_key = watermarker.generate_keys()\n",
     "\n",
@@ -47,7 +59,8 @@
     "    \"a\",\n",
     "    # [(50, 50), (150, 50), (150, 150), (50, 150)]\n",
     "    # [(5, 5), (15, 5), (15, 15), (5, 15)]\n",
-    "    [(10, 5), (20, 5), (20, 15), (10, 15)]\n",
+    "    # [(10, 5), (20, 5), (20, 15), (10, 15)]\n",
+    "    [(10, 10), (20, 10), (20, 20), (10, 20)]\n",
     ")\n",
     "watermarked_img.save(\"watermarked.png\")\n",
     "\n",
@@ -63,20 +76,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c7ecff9b-f64b-4146-8ed1-7cc3d82c9f09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/media/omkar/646AC6B66AC684701/CMSC652/CMSC-652-Group-Project/watermarking-attack/guo_zhuang')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Path().resolve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "add9570e-948e-4a2e-8df2-b0c2c1913aea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7dhbu238rt76fgjhe <class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "z = \"7dhbu238rt76fgjhe\"\n",
     "print(z, type(z))"
@@ -84,10 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5755211e-c2d3-45e3-99ce-8604cb74fcf2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'7dhbu238rt76fgjhe' <class 'bytes'>\n"
+     ]
+    }
+   ],
    "source": [
     "z1 = b\"7dhbu238rt76fgjhe\"\n",
     "print(z1, type(z1))"
@@ -95,20 +135,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ba90ad0e-7464-4148-9be8-1f929c44307e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "int(6.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1ae00c34-ccb1-49e7-9591-ad94dd326899",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "7 << 1 | 0"
    ]
