Completed gou zhuang

--- a/watermarking-attack/guo_zhuang/guo_zhuang.ipynb
+++ b/watermarking-attack/guo_zhuang/guo_zhuang.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import os\n",
     "from pathlib import Path\n",
+    "from glob import glob\n",
     "import numpy as np\n",
     "import hashlib\n",
     "from cryptography.hazmat.primitives.asymmetric import rsa, padding\n",
@@ -50,15 +51,15 @@
     "    # [(10, 5), (20, 5), (20, 15), (10, 15)]\n",
     "    [(10, 10), (20, 10), (20, 20), (10, 20)]\n",
     ")\n",
-    "watermarked_img.save(\"watermarked.png\")\n",
+    "# watermarked_img.save(\"watermarked.png\")\n",
     "\n",
     "# Extract and verify\n",
-    "result = watermarker.extract_watermark(\n",
-    "    \"watermarked.png\",\n",
-    "    public_key,\n",
-    "    [(5, 5), (15, 5), (15, 15), (5, 15)]\n",
-    ")\n",
-    "print(\"Verification result:\", result)\n",
+    "# result = watermarker.extract_watermark(\n",
+    "#     \"watermarked.png\",\n",
+    "#     public_key,\n",
+    "#     [(5, 5), (15, 5), (15, 15), (5, 15)]\n",
+    "# )\n",
+    "# print(\"Verification result:\", result)\n",
     "# print(result.decode(\"UTF-8\"))"
    ]
   },
@@ -118,6 +119,47 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "28463aca-c534-42a1-8437-2a4c9f9abfa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glob('../datasets/ctscan/raw/COVID/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55e6f268-3c5c-4ae8-bfae-8c71bd42a002",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.listdir('../datasets/ctscan/raw/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3d67ee7-f430-4479-8b87-51c642ec5d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_raw_dir = '../datasets/ctscan/raw/'\n",
+    "os.listdir(os.path.join(ct_raw_dir, 'COVID/'))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38689d22-9787-4925-bca0-b12704b10410",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.path.join(ct_raw_dir, 'COVID/', 'Covid (640).png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01e91865-b5df-4cfb-a034-da09f36bc174",
    "metadata": {},
    "outputs": [],
    "source": []
