--- a/watermarking-attack/ctscan_resnet50.ipynb
+++ b/watermarking-attack/ctscan_resnet50.ipynb
@@ -26,11 +26,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 1,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "cabf6168-3a3a-48e8-8224-1ee448b27b08",
    "metadata": {},
    "outputs": [],
@@ -60,7 +56,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 2,
    "id": "5d1bfcce-eb52-4774-8651-74fbb82ed817",
    "metadata": {},
@@ -76,12 +71,6 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": null,
-   "id": "5d1bfcce-eb52-4774-8651-74fbb82ed817",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "if torch.cuda.is_available():\n",
     "    device = torch.device('cuda')\n",
@@ -103,11 +92,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 3,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "28e9e2ab-86ab-4fe4-89bf-7d0d131ae9d0",
    "metadata": {},
    "outputs": [],
@@ -175,11 +160,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 4,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "3267f8e0-5a99-4aa8-b428-cd3a6a9b63b2",
    "metadata": {},
    "outputs": [],
@@ -221,11 +202,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 5,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "08c0984d-1b72-419d-af4a-fdd27ec957f6",
    "metadata": {},
    "outputs": [],
@@ -260,11 +237,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 6,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "f5056cde-77ba-4962-8f55-e56cf8b89a48",
    "metadata": {},
    "outputs": [],
@@ -307,11 +280,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 7,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "c847c7bb-6d8d-4851-a3c1-402c4084e843",
    "metadata": {},
    "outputs": [],
@@ -357,7 +326,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 8,
    "id": "2cc86c7b-9251-4521-ad5b-04ea4562ec78",
    "metadata": {},
@@ -373,12 +341,6 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": null,
-   "id": "2cc86c7b-9251-4521-ad5b-04ea4562ec78",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "dataset_dir = \"datasets/ctscan/raw\"\n",
     "covid_dir = \"datasets/ctscan/raw/COVID\"\n",
@@ -393,7 +355,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 9,
    "id": "e5a7004c-cb10-440f-b13d-ca993d46b187",
    "metadata": {},
@@ -408,12 +369,6 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "id": "e5a7004c-cb10-440f-b13d-ca993d46b187",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "dataset_paths = glob.glob(f\"{dataset_dir}/**/*.png\")\n",
     "covid_paths = glob.glob(f\"{covid_dir}/*.png\")\n",
@@ -426,11 +381,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 10,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "001f7b85-dd33-4eee-b911-0f7011aa9219",
    "metadata": {},
    "outputs": [],
@@ -440,11 +391,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 11,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "6fdb4395-23e2-47d4-89e4-63f5b049f9f6",
    "metadata": {},
    "outputs": [],
@@ -454,7 +401,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 12,
    "id": "7d8d2ca2-7e0b-41f6-b480-d0f4666b8074",
    "metadata": {},
@@ -469,12 +415,6 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "id": "7d8d2ca2-7e0b-41f6-b480-d0f4666b8074",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "print(\"Train:\", len(train_paths))\n",
     "print(\"Val:\", len(val_paths))\n",
@@ -483,7 +423,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 13,
    "id": "37b92aa9-bab2-45b2-a3e9-9823e9d7f279",
    "metadata": {},
@@ -501,12 +440,6 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "id": "37b92aa9-bab2-45b2-a3e9-9823e9d7f279",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "covid_path = os.path.join(\"COVID\", \"Covid\")\n",
     "\n",
@@ -533,11 +466,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 14,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "419d2a29-2916-4198-b9d1-64b8e127b7da",
    "metadata": {},
    "outputs": [],
@@ -549,7 +478,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 15,
    "id": "a26dd612-2236-4a1a-a3f7-fc410a339570",
    "metadata": {},
@@ -567,12 +495,6 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": null,
-   "id": "a26dd612-2236-4a1a-a3f7-fc410a339570",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "img = Image.open(covid_paths[0])\n",
     "img"
@@ -580,7 +502,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 16,
    "id": "b8a00a78-a873-4045-aea1-b4d61381ea9c",
    "metadata": {},
@@ -597,12 +518,6 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": null,
-   "id": "b8a00a78-a873-4045-aea1-b4d61381ea9c",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "img = Image.open(non_covid_paths[0])\n",
     "img"
@@ -618,11 +533,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 17,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "096f8795-dd11-488e-815a-58d75aa8e7dd",
    "metadata": {},
    "outputs": [],
@@ -652,11 +563,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 18,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "936edafe-0d3b-432e-8877-a12a2d8144ca",
    "metadata": {},
    "outputs": [],
@@ -687,11 +594,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 19,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "2e5e3c0f-738c-43c8-91dc-5ec105e6eba1",
    "metadata": {},
    "outputs": [],
@@ -703,11 +606,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 20,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "def44a01-bc52-4a11-80dd-54711154e3b5",
    "metadata": {},
    "outputs": [],
@@ -719,7 +618,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 21,
    "id": "14a7b7cc-c8cf-48a3-9176-2d76f9bcc54d",
    "metadata": {},
@@ -735,19 +633,12 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": null,
-   "id": "14a7b7cc-c8cf-48a3-9176-2d76f9bcc54d",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "next(iter(train_loader))[0].shape # images must have the same size"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 22,
    "id": "dc5f40c0-dd36-41fb-ae72-8828f5a59ffd",
    "metadata": {},
@@ -763,19 +654,12 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": null,
-   "id": "dc5f40c0-dd36-41fb-ae72-8828f5a59ffd",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "next(iter(train_loader))[1]"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 23,
    "id": "fa2d2d82-fa99-4a05-a9ca-0766c3a2b449",
    "metadata": {},
@@ -798,12 +682,6 @@
      "output_type": "display_data"
     }
    ],
-=======
-   "execution_count": null,
-   "id": "fa2d2d82-fa99-4a05-a9ca-0766c3a2b449",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "img = train_data[1][0]\n",
     "plt.grid(False)\n",
@@ -831,11 +709,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 24,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "ff7c821f-5a90-4b20-8873-9f0da7a9c72e",
    "metadata": {},
    "outputs": [],
@@ -845,7 +719,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 25,
    "id": "f613f2f8-912b-42ee-9692-e66612f74dc1",
    "metadata": {},
@@ -861,12 +734,6 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": null,
-   "id": "f613f2f8-912b-42ee-9692-e66612f74dc1",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "for parameter in resnet.parameters():\n",
     "    parameter.requires_grad = False\n",
@@ -876,7 +743,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 26,
    "id": "0cb37d2a-3d15-48b7-a9fb-2381aa9c132a",
    "metadata": {},
@@ -896,12 +762,6 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": null,
-   "id": "0cb37d2a-3d15-48b7-a9fb-2381aa9c132a",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "resnet.fc = nn.Sequential(\n",
     "    nn.Linear(resnet.fc.in_features, 512),  # Example: Add a fully connected layer\n",
@@ -923,11 +783,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 27,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "515f9b90-5e6a-40d8-a78b-f2b2936a1fee",
    "metadata": {},
    "outputs": [],
@@ -939,17 +795,12 @@
     "# Early stopping parameters\n",
     "best_score = float(\"inf\") # ModelCheckpoint\n",
     "patience = 0 # EarlyStopping\n",
-<<<<<<< HEAD
-    "initial_epochs = 20  # number of initial epochs"
-=======
-    "# fine_tuning_epochs = 50  # number of fine-tuning epochs\n",
-    "fine_tuning_epochs = 10  # number of fine-tuning epochs"
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
+    "fine_tuning_epochs = 50  # number of fine-tuning epochs\n",
+    "# fine_tuning_epochs = 10  # number of fine-tuning epochs"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 28,
    "id": "760a9a79-1a3c-4c3b-8866-c6841a2ba5d6",
    "metadata": {},
@@ -1061,12 +912,6 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "id": "760a9a79-1a3c-4c3b-8866-c6841a2ba5d6",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "# train loop\n",
     "\n",
@@ -1075,13 +920,8 @@
     "train_accs = []\n",
     "valid_accs = []\n",
     "\n",
-<<<<<<< HEAD
     "for epoch in range(initial_epochs):\n",
     "    print(f\"Epoch[{epoch+1}/{initial_epochs}],    \", end=\"\")\n",
-=======
-    "for epoch in range(fine_tuning_epochs):\n",
-    "    print(f\"Epoch[{epoch+1}/{fine_tuning_epochs}],    \", end=\"\")\n",
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
     "\n",
     "    avg_train_loss, train_acc = train_epoch(resnet)\n",
     "    avg_valid_loss, valid_acc = get_val(resnet)\n",
@@ -1121,11 +961,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 29,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "b6e56f59-68ae-48fd-9cf4-1c83a9861a0a",
    "metadata": {},
    "outputs": [],
@@ -1138,11 +974,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 30,
-=======
-   "execution_count": null,
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "id": "8af8f3f9-5778-4dc5-b1fc-725b80d26bba",
    "metadata": {},
    "outputs": [],
@@ -1154,17 +986,11 @@
     "# Early stopping parameters\n",
     "best_score = float(\"inf\") # ModelCheckpoint\n",
     "patience = 0 # EarlyStopping\n",
-<<<<<<< HEAD
     "fine_tuning_epochs = 50  # number of fine-tuning epochs"
-=======
-    "# fine_tuning_epochs = 50  # number of fine-tuning epochs\n",
-    "fine_tuning_epochs = 15  # number of fine-tuning epochs"
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 31,
    "id": "daa51e68-37ae-4bd2-9fb5-77cc79e2ad41",
    "metadata": {},
@@ -1319,12 +1145,6 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "id": "daa51e68-37ae-4bd2-9fb5-77cc79e2ad41",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "# train loop\n",
     "\n",
@@ -1366,7 +1186,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 32,
    "id": "d6785dc8-92a4-4267-b027-13e19669a267",
    "metadata": {},
@@ -1382,19 +1201,12 @@
      "output_type": "display_data"
     }
    ],
-=======
-   "execution_count": null,
-   "id": "d6785dc8-92a4-4267-b027-13e19669a267",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "learning_curves_tuning(train_losses, valid_losses, train_accs, valid_accs, fine_tune_epoch=2)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 33,
    "id": "998790d6-e59d-48df-816f-5d44562a0c3f",
    "metadata": {},
@@ -1407,12 +1219,6 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "id": "998790d6-e59d-48df-816f-5d44562a0c3f",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "validation_loss, validation_accuracy = get_val(resnet)\n",
     "print(f'Validation Loss: {validation_loss:.4f}, Validation Accuracy: {validation_accuracy*100:.2f}%')"
@@ -1420,7 +1226,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 34,
    "id": "ad9954de-ecba-4e2e-be67-76d22711b5a4",
    "metadata": {},
@@ -1433,12 +1238,6 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "id": "ad9954de-ecba-4e2e-be67-76d22711b5a4",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "test_loss, test_accuracy = get_test(resnet)\n",
     "print(f'Test Loss: {test_loss:.4f}, Test Accuracy: {test_accuracy*100:.2f}%')"
@@ -1454,7 +1253,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 35,
    "id": "72fd1f2c-e4dc-45ee-9403-4b52c5e77435",
    "metadata": {},
@@ -1475,12 +1273,6 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "id": "72fd1f2c-e4dc-45ee-9403-4b52c5e77435",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "y_true, y_pred = get_predict(resnet, test_loader, device)\n",
     "print(classification_report(y_true, y_pred, target_names= class_names))"
@@ -1488,7 +1280,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 36,
    "id": "29c83dcc-6f61-4816-957e-c1ed7a958637",
    "metadata": {},
@@ -1504,27 +1295,10 @@
      "output_type": "display_data"
     }
    ],
-=======
-   "execution_count": null,
-   "id": "29c83dcc-6f61-4816-957e-c1ed7a958637",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
    "source": [
     "cm = confusion_matrix(y_true, y_pred)\n",
     "plot_confusion_matrix(cm, class_names=class_names, figsize=(8,6));"
    ]
-<<<<<<< HEAD
-=======
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7d92213-2639-4703-846a-ca72ac63728d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
   }
  ],
  "metadata": {
@@ -1543,11 +1317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
    "version": "3.12.6"
-=======
-   "version": "3.12.9"
->>>>>>> 9610f8ecd268f2c0bb9e7f775426739f2567b602
   }
  },
  "nbformat": 4,
