--- a/watermarking-attack/ctscan_mobilenetv2.ipynb
+++ b/watermarking-attack/ctscan_mobilenetv2.ipynb
@@ -242,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_test(model, test_loader):\n",
+    "def get_test(device, model, test_loader):\n",
     "    \"\"\"\n",
     "    Calculates the test loss and accuracy for the given model.\n",
     "\n",
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "id": "2cc86c7b-9251-4521-ad5b-04ea4562ec78",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
        "['COVID', 'non-COVID']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "id": "e5a7004c-cb10-440f-b13d-ca993d46b187",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "001f7b85-dd33-4eee-b911-0f7011aa9219",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "6fdb4395-23e2-47d4-89e4-63f5b049f9f6",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "id": "7d8d2ca2-7e0b-41f6-b480-d0f4666b8074",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "id": "37b92aa9-bab2-45b2-a3e9-9823e9d7f279",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "id": "419d2a29-2916-4198-b9d1-64b8e127b7da",
    "metadata": {},
    "outputs": [],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "id": "a26dd612-2236-4a1a-a3f7-fc410a339570",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=256x202>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "id": "1e8c001a-43ff-43ff-b026-ddc1716821cb",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1184,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1227,7 @@
     }
    ],
    "source": [
-    "test_loss, test_accuracy = get_test(net, test_loader)\n",
+    "test_loss, test_accuracy = get_test(device, net, test_loader)\n",
     "print(f'Test Loss: {test_loss:.4f}, Test Accuracy: {test_accuracy*100:.2f}%')"
    ]
   },
@@ -1786,7 +1786,7 @@
     "    test_data = CovidDataset(df[\"watermarked path\"], transform, is_train=False)\n",
     "    test_loader = DataLoader(test_data, shuffle=False, batch_size=16)\n",
     "    \n",
-    "    test_loss, test_accuracy = get_test(net, test_loader)\n",
+    "    test_loss, test_accuracy = get_test(device, net, test_loader)\n",
     "    print(f'Test Loss: {test_loss:.4f}, Test Accuracy: {test_accuracy*100:.2f}%')\n",
     "\n",
     "    accs.append(test_accuracy)\n",
@@ -2064,8 +2064,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "0b009113-4afa-47ab-aede-c1dc8421f330",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "spec not found for the module 'models_shared'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[49]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mshared_util\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mimportlib\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mimportlib\u001b[49m\u001b[43m.\u001b[49m\u001b[43mreload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodels_shared\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m report = shared_util.ModelPerformanceReport()\n\u001b[32m      6\u001b[39m report.evaluate(device, net, criterion)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\uv\\python\\cpython-3.12.6-windows-x86_64-none\\Lib\\importlib\\__init__.py:130\u001b[39m, in \u001b[36mreload\u001b[39m\u001b[34m(module)\u001b[39m\n\u001b[32m    128\u001b[39m spec = module.__spec__ = _bootstrap._find_spec(name, pkgpath, target)\n\u001b[32m    129\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m spec \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m130\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mModuleNotFoundError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mspec not found for the module \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m\"\u001b[39m, name=name)\n\u001b[32m    131\u001b[39m _bootstrap._exec(spec, module)\n\u001b[32m    132\u001b[39m \u001b[38;5;66;03m# The module may have replaced itself in sys.modules!\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: spec not found for the module 'models_shared'"
+     ]
+    }
+   ],
+   "source": [
+    "import shared_util\n",
+    "import importlib\n",
+    "importlib.reload(shared_util)\n",
+    "\n",
+    "report = shared_util.ModelPerformanceReport()\n",
+    "report.evaluate(device, net, criterion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e621d1ff-8d64-4adf-925d-286ffb76a60a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2073,7 +2101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e621d1ff-8d64-4adf-925d-286ffb76a60a",
+   "id": "0d326d76-9d27-49a6-85e7-ba44c31df066",
    "metadata": {},
    "outputs": [],
    "source": []
